refactor: footer; upd: header.

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "appName": "APP_NAME",
-  "siteName": "Сибирский Хлебопекарный центр",
+  "siteName": "СибХЦ",
   "siteUrl": "#",
   "metaPath": ".meta",
   "sourcePath": "app",
