--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-csso": "^3.0.1",
     "gulp-html-replace": "^1.6.2",
-    "gulp-imagemin": "^6.1.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.1",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
@@ -55,6 +55,7 @@
     "critical": "^1.3.4",
     "gulp-cli": "^2.2.0",
     "gulp-debug": "^4.0.0",
+    "gulp-nop": "^0.0.3",
     "gulp-save": "^1.3.0",
     "gulp-sitemap": "^7.6.0",
     "html5shiv": "^3.7.3",
