--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.3.1",
   "description": "html-starter",
   "private": true,
+  "engines": {
+    "node": ">=8"
+  },
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build",
@@ -15,23 +18,29 @@
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
+    "critical": "^4.0.1",
     "dart-sass": "^1.24.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-cheerio": "^0.6.3",
+    "gulp-cli": "^2.3.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-csslint": "^1.0.1",
     "gulp-csslint-report": "^2.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-csso": "^3.0.1",
+    "gulp-debug": "^4.0.0",
     "gulp-html-replace": "^1.6.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.1",
+    "gulp-nop": "^0.0.3",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-save": "^1.3.0",
+    "gulp-sitemap": "^8.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^2.2.0",
@@ -46,21 +55,8 @@
     "yargs": "^14.0.0"
   },
   "dependencies": {
-    "5": "^0.0.1",
-    "critical": "^1.3.4",
-    "gulp-cli": "^2.2.0",
-    "gulp-debug": "^4.0.0",
-    "gulp-nop": "^0.0.3",
-    "gulp-save": "^1.3.0",
-    "gulp-sitemap": "^7.6.0",
-    "html5shiv": "^3.7.3",
-    "intersection-observer": "^0.7.0",
-    "jquery": "^3.3.1",
     "lazysizes": "^5.2.0-beta1",
     "normalize-scss": "^7.0.1",
-    "picturefill": "^3.0.3",
-    "react-app-polyfill": "^1.0.5",
-    "svg4everybody": "^2.1.9",
     "swiper": "^6.3.3"
   },
   "browserslist": [
