--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "html-starter",
-  "version": "1.3.1",
-  "description": "html-starter",
   "private": true,
-  "engines": {
-    "node": ">=8"
-  },
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build",
-    "prod": "gulp build-prod"
+    "prod": "gulp build-prod",
+    "deploy": "gh-pages -d dist"
   },
-  "keywords": [],
   "author": "SkazMasters",
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -21,6 +15,7 @@
     "critical": "^4.0.1",
     "dart-sass": "^1.24.0",
     "del": "^5.1.0",
+    "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-cheerio": "^0.6.3",
